--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,7 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://kit.fontawesome.com/94337cc788.js" crossorigin="anonymous"></script>
 </body>
 </html>
